# Amazon-Review-Sentiment-Analyzer

./: .replit  README.md  pyproject.toml  requirements.txt  reviews.py  selectors.txt  selectors.yml
